2011-03-28  David Hyatt  <hyatt@apple.com>

        Reviewed by Simon Fraser and Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=57221, memory corruption/crashes when positioned objects
        occur at the end of a line.
        
        The old code and new code for dealing with a trailing space object midpoint manipulated a raw
        array instead of the Vector. Otherwise this corruption would have been caught prior to check-in.
        
        I have patched the code to only go through the Vector and to make it handle the case that led to
        the corruption. Trailing positioned objects can occur both prior to and following the trailing space
        object's midpoint, so we have to be prepared to deal with both cases.
        
        This is already tested by fast/block/positioning/052.html, and that test now properly progresses
        like the other positioning tests did.

        * rendering/RenderBlockLineLayout.cpp:
        (WebCore::RenderBlock::findNextLineBreak):

2011-03-28  Andrei Popescu  <andreip@google.com>

        Reviewed by Steve Block.

        V8IDBKeyCustom.cpp does not compile with INDEXED_DATABASE disabled
        https://bugs.webkit.org/show_bug.cgi?id=57100

        Close the ENABLE guard and the namespace in the right order.

        No new tests, just cleanup.

        * bindings/v8/custom/V8IDBAnyCustom.cpp:
        * bindings/v8/custom/V8IDBKeyCustom.cpp:

2011-03-28  Jeff Miller  <jeffm@apple.com>

        Reviewed by Adam Roben.

        Include certificate when sending a WebCore::ResourceError to UI process on Windows
        https://bugs.webkit.org/show_bug.cgi?id=57195

        Add support for tracking the certificate in WebCore::ResourceError.

        * platform/network/ResourceErrorBase.cpp:
        (WebCore::ResourceErrorBase::copy): Call platformCopy() to copy platform-specific fields.
        * platform/network/ResourceErrorBase.h:
        (WebCore::ResourceErrorBase::platformCopy): Added.